# tarefa_tinnova

./: README.md  install.sh  main.py  pyproject.toml
models/: factorial_model.py  sum_multiples_model.py  votes_model.py
src/: task_1.py  task_2.py  task_3.py  task_4.py
tests/: test_main.py  test_task_1.py  test_task_2.py  test_task_3.py  test_task_4.py
